# tuiopcclient

./: .dockerignore  .gitignore  CHANGELOG.md  CONNECTION_LOGGING.md  Cargo.toml  Cross.toml  INSTALL.md  README.md  TESTING.md  config.json  dockerfile  log_test.rs  run.bat  run.ps1  test_input.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  release.md
.github/workflows/: ci.yml  nightly.yml  release.yml
analysis/: .descriptions.xml  Annotator.xml  CargoUnusedDependency.xml  CssUnusedSymbol.xml  DuplicatedCode.xml  DuplicatedCode_aggregate.xml  GrazieInspection.xml  HttpUrlsUsage.xml  JSUndeclaredVariable.xml  NewCrateVersionAvailable.xml  RsDetachedFile.xml  RsExternalLinter.xml  RsNeedlessLifetimes.xml  RsUnnecessaryQualifications.xml  SpellCheckingInspection.xml  script.js  styles.css
docker/: Dockerfile.alpine  Dockerfile.simple  Dockerfile.test  Dockerfile.ubuntu  docker-compose.test.yml
docs/: DOCKER_TESTING_SUMMARY.md  RELEASE_SETUP.md
pki/own/: OpcPlc.der  cert.der
pki/private/: OpcPlc.pem  OpcPlc__.pem  private.pem
pki/trusted/: OpcPlc [aae695152cba03c2c55d282821fb9608180544b1].der
scripts/: release.ps1  release.sh  test-builds.sh  test-comprehensive.ps1  test-comprehensive.sh  test-docker.ps1  test-docker.sh  test.ps1  test.sh
src/: client.rs  client_new.rs  config.rs  connection_manager.rs  endpoint_utils.rs  logging.rs  main.rs  menu.rs  node_utils.rs  session_utils.rs  statusbar.rs  ui.rs  ui.rs.backup  ui_new.rs  ui_old.rs  ui_utils.rs
src/components/: button.rs  mod.rs
(+30 files in other folders)
