[package]
name = "opcua-client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
tui-input = "0.12.1"
tui-logger = "0.17.3"
regex = "1.0"
opcua = { version = "0.12", features = ["client"] }
openssl = { version = "0.10", features = ["vendored"] }
parking_lot = "0.12"
env_logger = "0.11"
base64 = "0.22"
once_cell = "1.19"
chrono = { version = "0.4", features = ["clock"] }

[lints.clippy]
uninlined_format_args = "deny"
